--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -51,8 +51,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1 # v1.146.0
-        # with:
-          # bundler-cache: true
+        with:
+          bundler-cache: false
+      - name: Install gems
+        run: bundle install --jobs 4 --retry 3
       # Add or replace any other lints here
       - name: Security audit dependencies
         run: bundler-audit --update
