--- a/config/database.yml
+++ b/config/database.yml
@@ -30,6 +30,8 @@ development:
 test:
   <<: *default
   database: kucharka_test
+  username: kucharka
+  password: kucharka
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
