--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -25,7 +25,7 @@ jobs:
           MYSQL_PASSWORD: password
     env:
       RAILS_ENV: test
-      DATABASE_URL: "trilogy://rails:password@localhost:3306/rails_test"
+      DATABASE_URL: "mysql2://rails:password@localhost:3306/rails_test"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -34,6 +34,8 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - name: Create database
+        run: bin/rails db:create
       # Add or replace database setup steps here
       - name: Set up database schema
         run: bin/rails db:schema:load
