--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -20,12 +20,12 @@ jobs:
           - "3306:3306"
         env:
           MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: rails_test
-          MYSQL_USER: rails
-          MYSQL_PASSWORD: password
+          MYSQL_DATABASE: kucharka_test
+          MYSQL_USER: kucharka
+          MYSQL_PASSWORD: kucharka
     env:
       RAILS_ENV: test
-      DATABASE_URL: "mysql2://rails:password@mariadb:3306/rails_test"
+      DATABASE_URL: "trilogy://kucharka:kucharka@localhost:3306/rails_test"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
