--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -25,7 +25,7 @@ jobs:
           MYSQL_PASSWORD: kucharka
     env:
       RAILS_ENV: test
-      DATABASE_URL: "mysql2://kucharka:kucharka@localhost:3306/rails_test"
+      DATABASE_URL: "mysql2://kucharka:kucharka@mariadb:3306/rails_test"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
