--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -34,11 +34,11 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      - name: Create database
-        run: bin/rails db:create
+      # - name: Create database
+        # run: bin/rails db:create
       # Add or replace database setup steps here
       - name: Set up database schema
-        run: bin/rails db:schema:load
+        run: bin/rails db:setup
       # Add or replace test runners here
       - name: Run tests
         run: bin/rails test
