--- a/.github/workflows/another-try.yml
+++ b/.github/workflows/another-try.yml
@@ -14,9 +14,8 @@ jobs:
         env:
           MYSQL_HOST: 127.0.0.1
           MYSQL_DB: kucharka_test
-          MYSQL_USER: root
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_PASSWORD:
+          MYSQL_USER: kucharka
+          MYSQL_PASSWORD: kucharka
         ports:
           - "3306:3306"
     steps:
