--- a/.github/workflows/another-try.yml
+++ b/.github/workflows/another-try.yml
@@ -18,6 +18,8 @@ jobs:
           MYSQL_PASSWORD: kucharka
         ports:
           - "3306:3306"
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - uses: actions/checkout@v2
       - name: Setup Ruby 3.2.2
