--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -15,14 +15,19 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mariadb:
-        image: mariadb:10.5
+        image: mariadb:latest
         ports:
           - "3306:3306"
         env:
-          MYSQL_ROOT_PASSWORD: password
+          MARIADB_ROOT_PASSWORD: kucharka
+          MARIADB_DATABASE: kucharka_test
+          MARIADB_USER: kucharka
+          MARIADB_PASSWORD: kucharka
           MYSQL_DATABASE: kucharka_test
           MYSQL_USER: kucharka
           MYSQL_PASSWORD: kucharka
+          MYSQL_ROOT_PASSWORD: kucharka
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     env:
       RAILS_ENV: test
       DATABASE_URL: "mysql2://kucharka:kucharka@mariadb:3306/kucharka_test"
