--- a/.github/workflows/another-try.yml
+++ b/.github/workflows/another-try.yml
@@ -16,6 +16,7 @@ jobs:
           MYSQL_DB: kucharka_test
           MYSQL_USER: kucharka
           MYSQL_PASSWORD: kucharka
+          MYSQL_ROOT_PASSWORD: kucharka
         ports:
           - "3306:3306"
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
