--- a/config/database.yml
+++ b/config/database.yml
@@ -29,7 +29,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  adapter: sqlite3
+  # adapter: sqlite3
+  # encoding: utf8mb4
   database: kucharka_test
   username: kucharka
   password: kucharka
