Update mysql version

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -23,14 +23,10 @@ jobs:
           MARIADB_DATABASE: kucharka_test
           MARIADB_USER: kucharka
           MARIADB_PASSWORD: kucharka
-          MYSQL_DATABASE: kucharka_test
-          MYSQL_USER: kucharka
-          MYSQL_PASSWORD: kucharka
-          MYSQL_ROOT_PASSWORD: kucharka
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     env:
       RAILS_ENV: test
-      DATABASE_URL: "mysql2://kucharka:kucharka@mariadb:3306/kucharka_test"
+      # DATABASE_URL: "mysql2://kucharka:kucharka@mariadb:3306/kucharka_test"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
