--- a/.github/workflows/another-try.yml
+++ b/.github/workflows/another-try.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql:8.1
         env:
-          MYSQL_HOST: 127.0.0.1
+        #   MYSQL_HOST: 127.0.0.1
           MYSQL_DB: kucharka_test
           MYSQL_USER: kucharka
           MYSQL_PASSWORD: kucharka
