--- a/.github/workflows/another-try.yml
+++ b/.github/workflows/another-try.yml
@@ -14,7 +14,7 @@ jobs:
         env:
         #   MYSQL_HOST: 127.0.0.1
           MYSQL_DB: kucharka_test
-          MYSQL_USER: kucharka@%
+          MYSQL_USER: kucharka
           MYSQL_PASSWORD: kucharka
           MYSQL_ROOT_PASSWORD: kucharka
         ports:
@@ -35,7 +35,6 @@ jobs:
           RAILS_ENV: test
           DATABASE_PORT: 3306
         run: |
-          sudo /etc/init.d/mysql start
           bin/rails db:create
           bin/rails db:schema:load
           bin/rails test
