--- a/.github/workflows/another-try.yml
+++ b/.github/workflows/another-try.yml
@@ -20,7 +20,8 @@ jobs:
         ports:
           - "3306:3306"
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
+    env:
+        DATABASE_URL: "mysql2://kucharka:kucharka@mysql:3306/kucharka_test"
     steps:
       - uses: actions/checkout@v2
       - name: Setup Ruby 3.2.2
