--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -26,7 +26,7 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     env:
       RAILS_ENV: test
-      # DATABASE_URL: "mysql2://kucharka:kucharka@mariadb:3306/kucharka_test"
+      DATABASE_URL: "mysql2://kucharka:kucharka@127.0.0.1:3306/kucharka_test"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
