use 127.0.0.1 in both

--- a/.github/workflows/another-try.yml
+++ b/.github/workflows/another-try.yml
@@ -21,7 +21,7 @@ jobs:
           - "3306:3306"
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     env:
-        DATABASE_URL: "mysql2://kucharka:kucharka@mysql:3306/kucharka_test"
+        DATABASE_URL: "mysql2://kucharka:kucharka@127.0.0.1:3306/kucharka_test"
     steps:
       - uses: actions/checkout@v2
       - name: Setup Ruby 3.2.2
