--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,20 +20,21 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
+          POSTGRES_USER: kucharka
+          POSTGRES_PASSWORD: kucharka
           POSTGRES_DB: kucharka_test
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+      - uses: actions/checkout@v2
+      - name: Setup Ruby 3.2.2
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6.x
+          ruby-version: 3.2.2
+          bundler: default
+          bundler-cache: true
       - name: Build and run tests
         env:
-          DATABASE_URL: postgres://postgres:@localhost:5432/test
-          REDIS_URL: redis://localhost:6379/0
+          DATABASE_URL: postgres://kucharka:kucharka@localhost:5432/kucharka_test
           RAILS_ENV: test
           RAILS_MASTER_KEY: test
         run: |
