--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         env:
           DATABASE_URL: postgres://kucharka:kucharka@localhost:5432/kucharka_test
           RAILS_ENV: test
-          RAILS_MASTER_KEY: test
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: |
           sudo apt-get -yqq install libpq-dev
           gem install bundler
