--- a/.github/workflows/another-try.yml
+++ b/.github/workflows/another-try.yml
@@ -1,10 +1,10 @@
 name: github-actions-rails-mysql
 
 on:
-  pull_request:
-    branches: ['*']
-  push:
-    branches: [master]
+    # pull_request:
+    #   branches: ['*']
+    push:
+      branches: [master]
 jobs:
   test:
     runs-on: ubuntu-latest
