--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,9 @@
 name: "CI"
 on:
   push:
-    branches: [ "production" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "production" ]
+    branches: [ "main" ]
 jobs:
   test:
     runs-on: ubuntu-latest
