--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       db:
-        image: mysql:8.0
+        image: mysql:8.1
         ports:
           - 3306:3306
         env:
@@ -37,7 +37,7 @@ jobs:
           bundler-cache: true
       # Add or replace database setup steps here
       - name: Set up database schema
-        run: bin/rails db:setup db:schema:load
+        run: bin/rails db:drop db:setup db:schema:load
       # Add or replace test runners here
       - name: Run model tests
         run: bin/rails test test/models
