--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
       # Add or replace test runners here
       - name: Run model tests
         run: bin/rails test test/models
-      
+      - name: Prepare assets
+        run: bin/rails assets:precompile
       - name: Run controller tests selectively
         run: bin/rails test test/system/events_test
