--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,22 +1,23 @@
 # Name of your application. Used to uniquely configure containers.
-service: my-app
+service: kucharka
 
 # Name of the container image.
-image: user/my-app
+image: kucharka
 
 # Deploy to these servers.
 servers:
-  - 192.168.0.1
+  - janpeterka
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: my-user
+  server: ghcr.io
+  username: janpeterka
 
   # Always use an access token rather than real password when possible.
   password:
-    - KAMAL_REGISTRY_PASSWORD
+    - KAMAL_REGISTRY_TOKEN
 
 # Inject ENV variables into containers (secrets come from .env).
 # Remember to run `kamal env push` after making changes!
