--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -6,12 +6,18 @@ image: janpeterka/kucharka
 
 # Deploy to these servers.
 servers:
-  - kucharka
+  web:
+    hosts:
+      - kucharka
+    options:
+      "network": "kucharka-network"
+
+
+networks:
+  - kucharka-network
 
 # Credentials for your image host.
 registry:
-  # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
   server: ghcr.io
   username: janpeterka
 
@@ -26,8 +32,8 @@ env:
 #     DB_HOST: 192.168.0.2
   secret:
     - RAILS_MASTER_KEY
-    - KUCHARKA_DATABASE_PASSWORD
     - MYSQL_ROOT_PASSWORD
+    - MYSQL_PASSWORD
 
 
 # Use a different ssh user than root
@@ -47,19 +53,28 @@ env:
 # Use accessory services (secrets come from .env).
 accessories:
   db:
-    image: mysql:8.0
+    image: mysql
     host: kucharka
     port: 3306
+    # TODO: dont tunnel port
+    # port: 127.0.0.1:3306:3306
+
     env:
       clear:
         MYSQL_ROOT_HOST: '%'
+        MYSQL_DATABASE: kucharka
+        MYSQL_USER: kucharka
       secret:
         - MYSQL_ROOT_PASSWORD
+        - MYSQL_PASSWORD
+      
     # files:
       # - config/mysql/production.cnf:/etc/mysql/my.cnf
       # - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
     directories:
       - data:/var/lib/mysql
+    options:
+      network: "kucharka-network"
 #   redis:
 #     image: redis:7.0
 #     host: 192.168.0.2
