Update host to Docker container

--- a/config/database.yml
+++ b/config/database.yml
@@ -60,5 +60,4 @@ production:
   database: kucharka
   username: kucharka
   password: <%= ENV["MYSQL_PASSWORD"] %>
-  # host: kucharka-db
-  host: 10.0.60.33
+  host: kucharka-db
