--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,3 +13,12 @@ Lint/RedundantSplatExpansion:
 
 Style/ClassAndModuleChildren:
   Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Lint/UnusedMethodArgument:
+  Enabled: false
+
+Lint/MissingSuper:
+  Enabled: false
