Enable adding comments

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,3 +13,6 @@ Lint/RedundantSplatExpansion:
 
 Style/ClassAndModuleChildren:
   Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
