--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -43,7 +43,8 @@ env:
 #   user: app
 
 # Configure builder setup.
-# builder:
+builder:
+  multiarch: false
 #   args:
 #     RUBY_VERSION: 3.2.0
 #   secrets:
