--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,23 +16,23 @@
         }
     ],
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#fadfcd",
-        "activityBar.background": "#fadfcd",
+        "activityBar.activeBackground": "#cf844c",
+        "activityBar.background": "#cf844c",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#11ae50",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#fadfcd",
-        "statusBar.background": "#f5c19f",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#f0a371",
-        "statusBarItem.remoteBackground": "#f5c19f",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#f5c19f",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#f5c19f99",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBarBadge.background": "#9ae4ba",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#cf844c",
+        "statusBar.background": "#b76a31",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#cf844c",
+        "statusBarItem.remoteBackground": "#b76a31",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#b76a31",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#b76a3199",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#F5C19F"
+    "peacock.color": "#B76A31"
 }
