Correct trailing whitespace

--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -16,19 +16,13 @@
 # Uncomment the following lines to make the configuration take effect.
 
 PreCommit:
-#  RuboCop:
-#    enabled: true
-#    command: ['bundle', 'exec', 'rubocop']
+  RuboCop:
+    enabled: true
+    command: ['bundle', 'exec', 'rubocop']
   #  on_warn: fail # Treat all warnings as failures
-#
- TrailingWhitespace:
-   enabled: true
-#    exclude:
-#      - '**/db/structure.sql' # Ignore trailing whitespace in generated files
-#
-#PostCheckout:
-#  ALL: # Special hook name that customizes all hooks of this type
-#    quiet: true # Change all post-checkout hooks to only display output on failure
-#
-#  IndexTags:
-#    enabled: true # Generate a tags file with `ctags` each time HEAD changes
+
+  TrailingWhitespace:
+    enabled: true
+    exclude:
+      - '**/db/structure.sql' # Ignore trailing whitespace in generated files
+      - '**/fonts/**/*' # Ignore trailing whitespace in vendored files
