--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -19,10 +19,17 @@ PreCommit:
   RuboCop:
     enabled: true
     command: ['bundle', 'exec', 'rubocop']
-  #  on_warn: fail # Treat all warnings as failures
+    on_warn: fail # Treat all warnings as failures
+
+  SlimLint:
+    enabled: true
+    on_warn: fail
+    include:
+      - '**/*.slim'
 
   TrailingWhitespace:
     enabled: true
     exclude:
       - '**/db/structure.sql' # Ignore trailing whitespace in generated files
       - '**/fonts/**/*' # Ignore trailing whitespace in vendored files
+
