--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,11 @@ inherit_gem:
 # Lint/MissingSuper:
 #   Enabled: false
 
+Layout/ElseAlignment:
+  Enabled: false
+
+Layout/EndAlignment:
+  Enabled: false
 
 Layout/TrailingWhitespace:
   Enabled: true
