--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,12 +39,10 @@ jobs:
       - name: Set up database schema
         run: bin/rails db:drop db:setup db:schema:load
       # Add or replace test runners here
-      - name: Run model tests
-        run: bin/rails test test/models
       - name: Prepare assets
         run: bin/rails assets:precompile
-      - name: Run controller tests selectively
-        run: bin/rails test test/system/events_test test/controllers
+      - name: Run tests
+        run: bin/rails test
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
         if: failure()
