--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -44,7 +44,8 @@ env:
 
 # Configure builder setup.
 builder:
-  multiarch: false
+  arch: amd64
+  # multiarch: false
 #   args:
 #     RUBY_VERSION: 3.2.0
 #   secrets:
@@ -79,37 +80,5 @@ accessories:
     options:
       network: "kucharka-network"
 
-# Configure custom arguments for Traefik
-traefik:
-  # labels:
-    # traefik.docker.network: "kucharka-network"
-  args:
-    accesslog: true
-    accesslog.format: json
-
-# Configure a custom healthcheck (default is /up on port 3000)
-# healthcheck:
-#   path: /healthz
-#   port: 4000
-
-# Bridge fingerprinted assets, like JS and CSS, between versions to avoid
-# hitting 404 on in-flight requests. Combines all files from new and old
-# version inside the asset_path.
-# asset_path: /rails/public/assets
-
-# Configure rolling deploys by setting a wait time between batches of restarts.
-# boot:
-#   limit: 10 # Can also specify as a percentage of total hosts, such as "25%"
-#   wait: 2
-
-# Configure the role used to determine the primary_host. This host takes
-# deploy locks, runs health checks during the deploy, and follow logs, etc.
-#
-# Caution: there's no support for role renaming yet, so be careful to cleanup
-#          the previous role on the deployed hosts.
-# primary_role: web
-
-# Controls if we abort when see a role with no hosts. Disabling this may be
-# useful for more complex deploy configurations.
-#
-# allow_empty_roles: false
+proxy:
+  app_port: 3000
