--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           bundler-cache: true
       # Add or replace database setup steps here
       - name: Set up database schema
-        run: bin/rails db:drop db:setup db:schema:load
+        run: bin/rails db:drop db:setup
       # Add or replace test runners here
       - name: Prepare assets
         run: bin/rails assets:precompile
