--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
       # Add or replace database setup steps here
       - name: Set up database schema
         run: bin/rails db:drop db:setup
+      - name: Set up solid_errors schema
+        run: bin/rails db:create:errors
       # Add or replace test runners here
       - name: Prepare assets
         run: bin/rails assets:precompile
