Correct host name, correct db location

--- a/config/database.yml
+++ b/config/database.yml
@@ -60,8 +60,7 @@ production:
     database: kucharka
     username: kucharka
     password: <%= ENV["MYSQL_PASSWORD"] %>
-    # host: kucharka-db
-    host: 10.0.60.33
+    host: kucharka-db
 
   errors:
     adapter: sqlite3
