--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ name: "CI"
 on:
   pull_request:
     branches: ['*']
-  push:
-    branches: [main]
+  # push:
+    # branches: [main]
 jobs:
   test:
     runs-on: ubuntu-latest
