--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,8 @@ jobs:
         run: bin/rails assets:precompile
       - name: Run tests
         run: bin/rails test
+      - name: Run specs
+        run: bundle exec rspec
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
         if: failure()
